--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@
 title: 馨予和跃华的美好生活
 description: 记录我们的爱
 keywords: Happiness, Love
-author: 
+author: Wferr
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
