--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 # Site settings
-title: Modern Blog V2
-description: Modern-Blog A Elegant template for Jekyll
-keywords: Modern, Blogging, Fun
-author: Nadun
-baseurl: "/Jekyll-Modern-Blog" # the subpath of your site, e.g. /blog/
+title: 馨予和跃华
+description: 记录我们的爱
+keywords: Happiness, Love
+author: yuehua
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
-gems: [jekyll-paginate,jekyll-seo-tag,jekyll-sitemap]
-paginate: 3
-google_analytics: 'UA-XXXXXXX-X'
