--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,20 @@
-# Site settings
-title: 馨予和跃华
-description: 记录我们的爱
-keywords: Happiness, Love
-author: yuehua
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+# Site Settings
+
+paginate:            5
+
+# Build settings
+markdown:            kramdown
+highlighter:         rouge
+permalink:           none
+plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed]
+
+# feed settings
+title:		     "{{ site.data.settings.title }} | {{ site.data.settings.tagline }}"
+
+# RSS 2.0 can be used instead of Atom by uncommenting following two lines
+#feed:
+#   path:	     rss-feed.xml
+
+sass:
+  sass_dir: assets/css
+  style: :nested
