--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -18,11 +18,11 @@ menu:
 - {name: 'About', file: 'about.html'}
 - {name: 'Contact', file: 'contact.html'}
 
-social:
-- {icon: 'twitter', link: 'https://twitter.com/paululele'}
-- {icon: 'facebook', link: 'https://www.facebook.com/Le.Paul.94'}
-- {icon: 'instagram', link: 'https://instagram.com/paululele'}
-- {icon: 'linkedin', link: 'https://linkedin.com/in/lenpaul'}
-- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
+# social:
+# - {icon: 'twitter', link: 'https://twitter.com/paululele'}
+# - {icon: 'facebook', link: 'https://www.facebook.com/Le.Paul.94'}
+# - {icon: 'instagram', link: 'https://instagram.com/paululele'}
+# - {icon: 'linkedin', link: 'https://linkedin.com/in/lenpaul'}
+# - {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
