--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,39 @@
-_site
-.sass-cache
-.jekyll-metadata
-package.json
-yarn.lock
-node_modules/
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
 
-### macOS ###
-*.DS_Store
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# =========================
+# Operating System Files
+# =========================
+
+# OSX
+# =========================
+
+.DS_Store
 .AppleDouble
 .LSOverride
-
-# Icon must end with two \r
-Icon
 
 # Thumbnails
 ._*
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
+# Files that might appear on external disk
 .Spotlight-V100
-.TemporaryItems
 .Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
 
 # Directories potentially created on remote AFP share
 .AppleDB
@@ -31,3 +41,9 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+#Jekyll
+_site
+
+# webstorm
+.idea
