--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,10 @@
-title: 跃华
-description: > # this means to ignore newlines until "baseurl:"
-  记录。。。。
-permalink: ':title/'
-baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-
-# Author Settings
-author: Yuehua # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a student. # add description
-twitter: # add your Twitter handle
-facebook: # add your Facebook handle
-github: # add your Github handle
-linkedin: # add your Linkedin handle
-email: # add your Email address
-
-# Disqus
-discus-identifier: mr-brown # add your discus identifier
-
-# Tracker
-analytics: Google Analytics
-
-# Build Settings
-markdown: kramdown
-plugins:
-  - jekyll-sitemap
-
-exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock"]
+# Site settings
+title: Modern Blog V2
+description: Modern-Blog A Elegant template for Jekyll
+keywords: Modern, Blogging, Fun
+author: Nadun
+baseurl: "/Jekyll-Modern-Blog" # the subpath of your site, e.g. /blog/
+url: "" # the base hostname & protocol for your site
+gems: [jekyll-paginate,jekyll-seo-tag,jekyll-sitemap]
+paginate: 3
+google_analytics: 'UA-XXXXXXX-X'
