--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ twitter_username:
 default_img: 
 
 # Profile settings
-social:
-  twitter: 
+# social:
+  # twitter: 
 
 # Build settings
 exclude: ["node_modules", "gulpfile.js", "assets/js/app.js", "README.md", "Gemfile", "Gemfile.lock"]
